    - Tiberium Military 1 now reduces Tiberium damage taken by 75% instead of 80%
    - Reduced some of the higher emission multipliers
    - Adjusted MARV recipe
    - Tiberium Growth Acceleration is now required for Tiberium Nuclear Physics
  Features:
    - Added Tiberium Detonation Charge for destroying Tiberium Blossom Trees
    - Added Tiberium Reprocessor structure for more rapidly recycling unused ores into Tiberium Substrate
    - Added Tiberium-Primed Reactant, a new ingredient for the ore transmutation recipes
    - Added a new recipe for using Blue Tiberium in the transmutation process
    - Added an alert for players who are taking damage from Tiberium radiation
    - Added settings for customizing the growth rate of Blue Tiberium
    - Added setting for improving end-game UPS
---------------------------------------------------------------------------------------------------
Version: 1.1.24
  Bugfixes:
    - Fixed SRF emitters being disabled by AOE damage
    - Fixed crashes occurring when new forces were created
    - Fixed speed upgrades not working when Space Exploration is active
---------------------------------------------------------------------------------------------------
Version: 1.1.23
  Bugfixes:
    - Fixed Tiberium ore growing on top of water when certain mods were active (Thanks to Tazzer93 for fixing this with a pull request!)
    - Fixed centrifuging recipes missing ores when Extended Rocket Payloads Continued was active
    - Fixed Tiberium Armor items and recipes still showing up in certain menus after they were removed
  Features:
    - Updated compatibility for new version of Obelisks of Light mod
    - Made AAI miners immune to damage from Tiberium growth so they stop dying while mining Tiberium
    - Created add_tiberium_immunity and add_tiberium_immunity_prototype remote interface functions so other mods can flag their entities as unaffected by the damage from Tiberium growth