@@ -252,6 +252,7 @@ tiberium-byproduct-direct=Direct Sludge Waste
 tiberium-debug-text=Debug Mode
 # __1__ is replaced with a centrifuging noun phrase from [technology-name]
 tiberium-centrifuge-override=Override __1__ Outputs
+tiberium-resource-exclusions=Exlcude Specific Resources
 tiberium-tier-zero=Add Burner Tier to Centrifuging
 tiberium-advanced-start=Tiberium Advanced Start
 tiberium-ore-removal=Tiberium Ore Only
@@ -270,7 +271,8 @@ tiberium-blue-saturation-point=What percent of Green Tiberium transformed to Blu
 tiberium-blue-saturation-slowdown=How fast Green Tiberium should be transformed to Blue Tiberium after the planet is fully saturated with Blue Tiberium.\nDefault: 10%
 tiberium-debug-text=Activates useful and annoying debugging messages both in-game and as part of the startup process. Logs additional information to factorio-current.log file for troubleshooting.\nDefault: disabled
 # __1__ is replaced with a centrifuging noun phrase from [technology-name]
-tiberium-centrifuge-override=Advanced setting: replace the automatically generated __1__ recipe output with something you feel is more appropriate for your mod combination.\nEnter a delimited string of the items/fluids and amounts that should come from the recipe in the exact format "item1-internal-name:item1-amount,item2-internal-name:item2-amount" e.g. iron-ore:13,stone:3\nYou can find items' internal names by loading into a game, pressing F4 to open debug settings, enabling "show-debug-info-in-tooltips", and then mousing over the desired item and noting the "item-name" field. For fluids, mouse over them in FNEI or the un-barreling recipes.\nDefault: leave blank to use the automatically generated __1__ Centrifuging recipe output
+tiberium-centrifuge-override=Advanced setting: replace the automatically generated __1__ recipe output with something you feel is more appropriate for your mod combination.\nEnter a delimited string of the items/fluids and amounts that should come from the recipe in the exact format "item1-internal-name:item1-amount,item2-internal-name:item2-amount" e.g. iron-ore:13,crude-oil:32\nYou can find items' internal names by loading into a game, pressing F4 to open debug settings, enabling "show-debug-info-in-tooltips", and then mousing over the desired item and noting the "item-name" field. For fluids, mouse over them in FNEI or the un-barreling recipes.\nDefault: leave blank to use the automatically generated __1__ Centrifuging recipe output
+tiberium-resource-exclusions=Advanced setting: list resources that should never be given by tiberium centrifuging or transmutation recipes.\nEnter a delimited string of the items/fluids in the exact format "item1-internal-name,item2-internal-name" e.g. uranium-ore,crude-oil\nYou can find items' internal names by loading into a game, pressing F4 to open debug settings, enabling "show-debug-info-in-tooltips", and then mousing over the desired item and noting the "item-name" field. For fluids, mouse over them in FNEI or the un-barreling recipes.\nDefault: leave blank to allow centrifuging and transmuting all resources
 tiberium-value=Scales how much raw material you get from a single piece of Tiberium ore. Higher values make the game easier.\nDefault: 10
 tiberium-wont-damage-biters=Prevents biters from dying to Tiberium fields.  Does not affect damage dealt with Tiberium weapons.\nDefault: enabled
 tiberium-spread=Controls how rapidly Tiberium spreads.  Higher values will aggressively cover the landscape. Zero will give regenerating fields that don't expand infinitely.\nDefault: 30
